[package]
name = "ecies-eth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

thiserror = "1.0"
rand = "0.8"
sha2 = "0.10"
elliptic-curve = "0.12"
aes = "0.8"
ctr = "0.9"
typenum = "1"
concat-kdf = "0.1"
generic-array = "0.14"
k256 = "0.11"
